# sift

./: .gitignore  .pre-commit-config.yaml  README.md  config.example.toml  config.toml  pyproject.toml  setup.sh  sift.py
scripts/: sift.py  sift_legacy.py
src/sift/: cache.py  cli.py  config.py  config.py:Zone.Identifier  errors.py  ffprobe.py  inventory.py  model.py  router.py  scaffold.py  scan.py  transfer.py  utils.py
tests/: test_cache_roundtrip.py  test_cli.py  test_config_flags.py  test_ffprobe_summarize.py  test_flags_behavior.py  test_inventory_proposed_name.py  test_naming_render.py  test_sample_detection.py  test_scan.py  test_transfer.py  test_transfer_skip_existing.py
